--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <i class="fa fa-bars fa-lg"></i>
             </button>
-            <a href="{{ site.baseurl }}/" title="HOME"><strong style="color: white;">HOME</strong></a>
+            <a href="{{ site.baseurl }}/" title="HOME"><strong style="color: black;">HOME</strong></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
