doc: add the signoff section.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,8 +64,8 @@ layout: default
     <br>
 
 
-               <!-- {% include signoff.html %} 
-    <hr class="small"> -->
+    {% include signoff.html %} 
+    <hr class="small">
  {% if site.share %}{% include share.html %}{% endif %}
                         
 {% if site.comments %}{% include disqus_comments.html %}{% endif %}
