--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -9,9 +9,9 @@
          <div id="mc_embed_shell">
             <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
         <style type="text/css">
-              #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
+              /* #mc_embed_signup{background:#0f0d0d; false; clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
               /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ */
         </style>
         <div id="mc_embed_signup">
           <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
