--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -10,8 +10,8 @@
             <div id="mc_embed_signup">
           <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
               <div id="mc_embed_signup_scroll">
-                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                  <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
+                  <div class="mc-field-group">
+                     <label for="mce-EMAIL">Email Address </label>
                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
                   </div>
           <div aria-hidden="true" style="position: absolute; left: -5000px;">
