--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -5,29 +5,28 @@
       <center>
          
          <h4>SUBSCRIBE TO RECEIVE POSTS DIRECTLY TO YOUR INBOX</h4>
-         
-         <div id="mc_embed_shell">
-            <div id="mc_embed_signup">
-          <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-              <div id="mc_embed_signup_scroll">
-                  <div class="mc-field-group">
-                     <label for="mce-EMAIL">Email Address </label>
-                     <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
-                  </div>
-          <div aria-hidden="true" style="position: absolute; left: -5000px;">
-              /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-              <input type="text" name="b_757680bb704bbcb7625216a6e_2c10623901" tabindex="-1" value="">
-          </div>
-              <div class="optionalParent">
-                  <div class="clear foot">
-                      <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                  </div>
-              </div>
-          </div>
-        </form>
-        </div>
-        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
-        
+         <div>
+            <div id="mc_embed_shell">
+               <div id="mc_embed_signup">
+               <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                   <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                   <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                   <div id="mce-responses" class="clear foot">
+                       <div class="response" id="mce-error-response" style="display: none;"></div>
+                       <div class="response" id="mce-success-response" style="display: none;"></div>
+                   </div>
+                       <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                           /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                           <input type="text" name="b_757680bb704bbcb7625216a6e_2c10623901" tabindex="-1" value="">
+                       </div>
+                   </div>
+                   </form>
+               </div>
+               <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+               <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
+               </script>
+           </div>
+         </div>
          
       </center>
 
