--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -4,8 +4,9 @@
 
       <center>
          
-         <h4>SUBSCRIBE TO RECEIVE POSTS DIRECTLY TO YOUR INBOX</h4>
+        
          <div style="color: white;">
+            <h4>SUBSCRIBE TO RECEIVE POSTS DIRECTLY TO YOUR INBOX</h4>
             <div id="mc_embed_shell">
                <div id="mc_embed_signup">
                   <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
@@ -28,7 +29,7 @@
               
                       <div class="optionalParent">
                           <div class="clear foot">
-                              <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                              <input style="background-color: black;" type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
                           </div>
                       </div>
                     </div>
