--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -14,7 +14,7 @@
                           
                           <div class="mc-field-group">
                               <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                              <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
+                              <input style="background-color: black;" type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
                           </div>
               
                       <div id="mce-responses" class="clear foot">
