--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -26,10 +26,9 @@
                           /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
                           <input type="text" name="b_757680bb704bbcb7625216a6e_2c10623901" tabindex="-1" value="">
                       </div>
-                      <br>
                       <div class="optionalParent">
                           <div class="clear foot">
-                              <input style="background-color: black;" type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                              <input style="background-color: black; margin-top: 1rem;" type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
                           </div>
                       </div>
                     </div>
