doc: beautify subgallery.html

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -4,7 +4,7 @@
         <h6>Share this post</h6>
     </p>
     <!-- Social media icon & links -->
-    <ul class="social-mini">
+    <ul class="social-mini" style="margin-bottom: 1rem;">
         <li>
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" data-toggle="tooltip" title="Share on Facebook" itemprop="Facebook">
                 <span class="fa-stack fa-lg" style="color: #223333;font-size:1em;">
