doc: beautify post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,7 +74,7 @@ layout: default
             <br>
             <!-- Post Share Part -->
             <!-- ------------------------ -->
-            <!-- <hr class="small">
+            <hr class="small">
             {% if site.share %}
                 {% include share.html %}
             {% endif %}
@@ -82,7 +82,7 @@ layout: default
             {% if site.comments %}
                 {% include disqus_comments.html %}
             {% endif %}    
-            <br> -->
+            <br>
             <!-- ------------------------ -->
             <ul class="pager">
                 {% if page.previous.url %}
