[doc]: update subscribe information.

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -3,8 +3,8 @@
    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <center>
          <div style="color: white;">
-            <h4 style="color: white;">SUBSCRIBE TO RECEIVE POSTS DIRECTLY TO YOUR INBOX</h4>
-            <p style="color: white;font-size: 16px;">订阅后直接将最新文章发送到您的收件箱</p>
+            <h4 style="color: white;">GET THE LATEST STORIES DELIVERED STRAIGHT TO YOUR INBOX!</h4>
+            <p style="color: white;font-size: 16px;">最新故事直达您的收件箱，轻松掌握每一刻精彩！</p>
             <div id="mc_embed_shell">
                <div id="mc_embed_signup">
                   <form action="https://163.us14.list-manage.com/subscribe/post?u=757680bb704bbcb7625216a6e&amp;id=2c10623901&amp;f_id=006344e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
